--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,10 +8,10 @@ spring:
     url: jdbc:mysql://localhost:3306/svnHotelDB
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
-    show-sql: true
+    show-sql: false
     hibernate:
       ddl-auto: update
-      format_sql: true
+      format_sql: false
   servlet:
     multipart:
       max-file-size: 5MB
